syntax = "proto3";

package server.account_balance_history;

import "shared/account_balance_history.proto";

message GetAccountBalanceHistoriesRequest {
  // If provided, returns results associated with the account_ids.
  repeated string obfuscated_account_ids = 1;

  // If not provided, will assume one year ago.
  string start_date = 2; // YYYY-MM-DD

  // If not provided, will assume now.
  string end_date = 3; // YYYY-MM-DD
}

message GetAccountBalanceHistoriesResponse {
  repeated shared.AccountBalanceHistory account_balance_histories = 1;
}
