syntax = "proto3";

package server.transaction;

import "shared/error_type.proto";

message DeleteTransactionsRequest {
  repeated int32 ids = 1; // required
}

message DeleteTransactionsResponse {
  message Result {
    int32 id = 1;

    // If unset, successful.
    shared.ErrorType error_type = 2;
  }
  repeated Result results = 1;
}

